grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: argocd-apps
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
